[tool.poetry]
name = "port-coords"
version = "0.1.0"
description = ""
authors = ["Victor Tantillo <vctantillo@miners.utep.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
datapackage = "^1.11.1"
requests = "^2.23.0"
jupyter = "^1.0.0"
pandas = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
